[gd_scene load_steps=46 format=4 uid="uid://bxe32q67lr32p"]

[ext_resource type="Script" path="res://scripts/label.gd" id="1_7k2ch"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_81jm7"]
[ext_resource type="Texture2D" uid="uid://dspn3qqf3kmou" path="res://assets/arts/player_player/ready_attack.png" id="1_foey5"]
[ext_resource type="Shader" path="res://assets/shaders/hatch.gdshader" id="1_oid1q"]
[ext_resource type="Texture2D" uid="uid://r1vaxxncae52" path="res://assets/arts/player_player/exarm.png" id="1_wy8ga"]
[ext_resource type="Texture2D" uid="uid://c1lspfv8x1ww0" path="res://assets/arts/player_player/shirt.png" id="2_tsmin"]
[ext_resource type="Texture2D" uid="uid://bqecyy3uxo8le" path="res://assets/pics/B100_balaclava_feature_highlight_01_1024x1024.png" id="2_xn253"]
[ext_resource type="Texture2D" uid="uid://dgieqr5u5c682" path="res://assets/arts/player_player/attacking.png" id="3_6k8wp"]
[ext_resource type="Texture2D" uid="uid://dlonms56hknqi" path="res://assets/arts/player_player/pant.png" id="3_h4b65"]
[ext_resource type="Texture2D" uid="uid://busu0hxpvnom0" path="res://assets/arts/player_player/foot.png" id="4_y4eyo"]
[ext_resource type="Texture2D" uid="uid://s8e3ogvwh8cv" path="res://assets/arts/player_player/flame.png" id="5_2w82r"]
[ext_resource type="Texture2D" uid="uid://bfgfw1hwnx5wx" path="res://assets/arts/player_player/exarm_L.png" id="5_3ur1p"]
[ext_resource type="Texture2D" uid="uid://b5ap0r6kl5wid" path="res://assets/arts/player_player/exarm_L_close.png" id="5_fvbxu"]
[ext_resource type="Texture2D" uid="uid://2b5vqwd0ftmn" path="res://assets/arts/player_player/crosshair2.png" id="9_uamrb"]
[ext_resource type="FontFile" uid="uid://ctn5q7wl487rw" path="res://theme/fonts/Vinque Rg.otf" id="11_8qnrg"]
[ext_resource type="Shader" path="res://assets/shaders/player.gdshader" id="13_lmqdl"]

[sub_resource type="BoxMesh" id="BoxMesh_anifq"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6m5bp"]
radius = 0.3
height = 1.75

[sub_resource type="Gradient" id="Gradient_c2erw"]
offsets = PackedFloat32Array(0.00913242, 1)
colors = PackedColorArray(1, 0, 0, 1, 0.987713, 0.476095, 1.54018e-06, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_g0rnv"]
gradient = SubResource("Gradient_c2erw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v13j4"]
lifetime_randomness = 1.0
emission_shape = 3
emission_box_extents = Vector3(0.01, 0.01, 0.01)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_max = 0.5
gravity = Vector3(0, 0.04, 0)
tangential_accel_min = -0.0100022
tangential_accel_max = 0.00999776
scale_min = 0.01
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_g0rnv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b7nhm"]
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_tukwe"]
material = SubResource("StandardMaterial3D_b7nhm")
radius = 0.05
height = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_0tq62"]
size = Vector2(1.6, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sco8r"]
shader = ExtResource("1_oid1q")
shader_parameter/colors = null
shader_parameter/dither = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cl181"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jmds"]
bg_color = Color(0.605674, 1.31156e-06, 2.88785e-07, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ehlq"]
shader = ExtResource("13_lmqdl")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_edfw2"]
resource_name = "Scene_-_Root"
cull_mode = 2
roughness = 0.6

[sub_resource type="ArrayMesh" id="ArrayMesh_yh513"]
_surfaces = [{
"aabb": AABB(-2, -2, -2, 4, 4, 4),
"format": 34896613377,
"index_count": 24,
"index_data": PackedByteArray("AAACAAEAAwAAAAEAAgAEAAEABAADAAEAAgAAAAUAAAADAAUABAACAAUAAwAEAAUA"),
"name": "Scene_-_Root",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 6,
"vertex_data": PackedByteArray("/3//f///AAD/fwAA/38AAP///3//fwAAAAD/f/9/AAD/f/9/AAAAAP9/////fwAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_27b3g"]
resource_name = "Sketchfab_Scene_Object_0"
_surfaces = [{
"aabb": AABB(-2, -2, -2, 4, 4, 4),
"format": 34896613383,
"index_count": 24,
"index_data": PackedByteArray("AAACAAEAAwAMABIAFQAEABMADwAJABQAFgANAAUADgAKAAYAEAAXAAcACwARAAgA"),
"material": SubResource("StandardMaterial3D_edfw2"),
"name": "Scene_-_Root",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("/3//f///veP/fwAA/3+94////3//f73jAAD/f/9/rMj/f/9/AAAa+/9/////f4f2/3////9/SsD/f////38E5f9/////f5bxAAD/f/9/k+EAAP9//39KwAAA/3//f5bx/3//f///rMj/f/9///+H9v9//3///0rA/3//fwAAk+H/f/9/AAAE5f9//38AAJbx/38AAP9/rMj/fwAA/38a+/9/AAD/f5Ph////f/9/Gvv///9//3+H9v///3//fwTl14++WdePvlnXj75Z/z//v64o+sqbnnyXRIc4t/+//z+NZEHCTlhe9ESHOLeNZEHC/z//v5uefJdEhzi3Tlhe9P+//z+NZEHC/z//v64o+spOWF70rij6ypuefJf/v/8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_yh513")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t08rx"]
height = 0.495025
radius = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_hgqmd"]
size = Vector3(0.298083, 1.14196, 0.759804)

[sub_resource type="BoxShape3D" id="BoxShape3D_vum5q"]

[sub_resource type="BoxMesh" id="BoxMesh_3f1wh"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_btpvi"]
shader = ExtResource("1_oid1q")
shader_parameter/colors = 1.0
shader_parameter/dither = null

[sub_resource type="CylinderShape3D" id="CylinderShape3D_76ijs"]
height = 0.3
radius = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_nuo0q"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_o1u06"]
size = Vector3(0.328186, 0.270569, 0.267334)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bxrme"]
albedo_color = Color(0.462291, 0.462291, 0.462291, 1)
albedo_texture = ExtResource("2_xn253")

[sub_resource type="QuadMesh" id="QuadMesh_m2qju"]
material = SubResource("StandardMaterial3D_bxrme")
size = Vector2(2, 2)
subdivide_width = 20
subdivide_depth = 20

[sub_resource type="Animation" id="Animation_e2r4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ui/attacking:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yxrai"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.233258, 6.27667),
"update": 0,
"values": [Color(1, 0, 0, 0.290196), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sbqdd"]
resource_name = "attack"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui/attacking:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.27, 0.3),
"transitions": PackedFloat32Array(0.287175, 0.329877, 3.03143, 9.51365),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcn2s"]
_data = {
"RESET": SubResource("Animation_e2r4r"),
"attack": SubResource("Animation_sbqdd"),
"hurt": SubResource("Animation_yxrai")
}

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
floor_snap_length = 0.0
script = ExtResource("1_81jm7")

[node name="height_detect" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)
collision_mask = 2
hit_from_inside = true

[node name="right" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_anifq")

[node name="left" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_anifq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_6m5bp")

[node name="min_climb_detector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00278, -0.703058)
exclude_parent = false
hit_from_inside = true
debug_shape_thickness = 5

[node name="body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.15)

[node name="Sprite3D" type="Sprite3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.10632, -1.91464)
visible = false
modulate = Color(0.180005, 0.180005, 0.180005, 1)
texture = ExtResource("2_xn253")

[node name="attack_hand" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, -0.00241182, 0.0999709, 0, -0.0999709, -0.00241182, 0.329684, -0.198978, -0.534495)
visible = false
layers = 1024
billboard = 1
texture = ExtResource("1_foey5")

[node name="hands" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.515542, -0.145935, 0.105017)
visible = false
layers = 1024
sorting_offset = 99.0
billboard = 1
render_priority = 127
texture = ExtResource("1_wy8ga")

[node name="hands3" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.515542, -0.145935, 0.105017)
layers = 1024
sorting_offset = 99.0
billboard = 1
render_priority = 127
texture = ExtResource("5_2w82r")

[node name="OmniLight3D" type="OmniLight3D" parent="body/hands3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35177, 0, -3.21822)
light_color = Color(1, 0.721569, 0.415686, 1)
omni_range = 6.0
omni_attenuation = 2.0

[node name="GPUParticles3D" type="GPUParticles3D" parent="body/hands3/OmniLight3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.00476348, 0.173651, 0.0166724)
amount = 20
process_material = SubResource("ParticleProcessMaterial_v13j4")
draw_pass_1 = SubResource("SphereMesh_tukwe")

[node name="hands2" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0958506, -0.145935, 0.105017)
layers = 1024
sorting_offset = 1.0
billboard = 1
render_priority = 1
texture = ExtResource("5_fvbxu")

[node name="shirt" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, -0.1, -1.50996e-08, 0, 1.50996e-08, -0.1, 0, -0.157, 0)
layers = 1024
billboard = 1
texture_filter = 0
texture = ExtResource("2_tsmin")

[node name="pant" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, -0.1, -1.50996e-08, 0, 1.50996e-08, -0.1, 0, -0.181, 0)
layers = 1024
billboard = 1
texture_filter = 0
texture = ExtResource("3_h4b65")

[node name="foot" type="Sprite3D" parent="body"]
transform = Transform3D(0.1, 0, 0, 0, -0.1, -1.50996e-08, 0, 1.50996e-08, -0.1, 0, -0.361, 0)
layers = 1024
billboard = 1
texture_filter = 0
texture = ExtResource("4_y4eyo")

[node name="camer_holder" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="camer_holder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.15)
cull_mask = 523261
current = true

[node name="hitscan" type="RayCast3D" parent="camer_holder/Camera3D"]
target_position = Vector3(0, 0, -1)
collision_mask = 1048576
collide_with_areas = true
collide_with_bodies = false

[node name="AudioListener3D" type="AudioListener3D" parent="camer_holder/Camera3D"]

[node name="center" type="Node3D" parent="camer_holder/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="camera_shader" type="MeshInstance3D" parent="camer_holder/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.545088)
visible = false
mesh = SubResource("QuadMesh_0tq62")
surface_material_override/0 = SubResource("ShaderMaterial_sco8r")

[node name="SubViewportContainer" type="SubViewportContainer" parent="camer_holder/Camera3D"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="camer_holder/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="weaporn_cam" type="Camera3D" parent="camer_holder/Camera3D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.15)
cull_mask = 1024

[node name="Control" type="Control" parent="."]
visibility_layer = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("1_7k2ch")

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_top = 111.0
offset_right = 40.0
offset_bottom = 134.0

[node name="TextureRectTop" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 104.0
offset_right = 112.0
offset_bottom = 8.0
expand_mode = 1
stretch_mode = 4

[node name="TextureRectBottom" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_right = 120.0
offset_bottom = 8.0
expand_mode = 1
stretch_mode = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control"]
visible = false
layout_mode = 1
offset_right = 1152.0
offset_bottom = 650.0

[node name="SubViewport" type="SubViewport" parent="Control/SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="Control/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.305)
cull_mask = 1047551

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="attacking" type="TextureRect" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.815
offset_top = -301.78
offset_right = 582.185
offset_bottom = 722.22
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_6k8wp")
stretch_mode = 2

[node name="hp_bar" type="ProgressBar" parent="ui"]
layout_mode = 1
offset_left = 8.0
offset_top = 48.0
offset_right = 30.0
offset_bottom = 192.0
theme_override_styles/background = SubResource("StyleBoxEmpty_cl181")
theme_override_styles/fill = SubResource("StyleBoxFlat_8jmds")
max_value = 10.0
fill_mode = 2
show_percentage = false

[node name="interact_label" type="Label" parent="ui"]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 23.0
offset_right = 30.0
offset_bottom = 47.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("11_8qnrg")
theme_override_font_sizes/font_size = 17
text = "hp"

[node name="player_status" type="VBoxContainer" parent="ui"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 8.0
offset_right = -1024.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 8.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="interact_label" type="Label" parent="ui/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 17
text = "prompt
[key]"
horizontal_alignment = 1

[node name="book_bg" type="TextureRect" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -556.0
offset_right = 1520.0
offset_bottom = 1252.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3ur1p")
stretch_mode = 4

[node name="VBoxContainer3" type="VBoxContainer" parent="ui/book_bg"]
z_index = 14
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -480.0
offset_right = -240.0
offset_bottom = -351.0
grow_horizontal = 2
grow_vertical = 2

[node name="interact_label" type="Label" parent="ui/book_bg/VBoxContainer3"]
z_index = 360
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "What I have "
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ui/book_bg"]
z_index = 14
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -656.0
offset_top = -480.0
offset_right = -472.0
offset_bottom = -351.0
grow_horizontal = 2
grow_vertical = 2

[node name="interact_label" type="Label" parent="ui/book_bg/VBoxContainer2"]
z_index = 360
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "objective"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ui/book_bg"]
z_index = 360
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -648.0
offset_top = -440.0
offset_right = -464.0
offset_bottom = -371.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[s]asdsadasdasd[/s]
[s]asdsadasdasd[/s]
[s]asdsadasdasd[/s]"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="ui/book_bg"]
z_index = 360
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -432.0
offset_right = -232.0
offset_bottom = -363.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="crosshair" type="TextureRect" parent="ui"]
z_index = -4096
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_uamrb")
stretch_mode = 3

[node name="ColorRect" type="ColorRect" parent="ui"]
material = SubResource("ShaderMaterial_6ehlq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)

[node name="center" type="Node3D" parent="."]
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0, 0, 0)

[node name="subtopview" type="SubViewport" parent="center"]
canvas_item_default_texture_filter = 0
size = Vector2i(32, 32)

[node name="light_detection" type="Node3D" parent="center/subtopview"]

[node name="Object_2" type="MeshInstance3D" parent="center/subtopview/light_detection"]
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0, 0, 0)
layers = 524288
mesh = SubResource("ArrayMesh_27b3g")
skeleton = NodePath("")

[node name="Camera3DTop" type="Camera3D" parent="center/subtopview/light_detection"]
transform = Transform3D(0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, -0.707107, -3.09086e-08, 0, 0.5, 0)
cull_mask = 524289
fov = 60.0
far = 14.05

[node name="subbottom" type="SubViewport" parent="center"]
canvas_item_default_texture_filter = 0
size = Vector2i(32, 32)

[node name="light_detection" type="Node3D" parent="center/subbottom"]

[node name="Camera3DBottom" type="Camera3D" parent="center/subbottom/light_detection"]
transform = Transform3D(0.707107, 0.707107, -3.09086e-08, 0, -4.37114e-08, -1, -0.707107, 0.707107, -3.09086e-08, 0, -0.5, 0)
cull_mask = 524289
fov = 60.0
far = 14.05

[node name="obs_detect" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="obs_detect"]
shape = SubResource("CylinderShape3D_t08rx")

[node name="peekDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.00395054)
visible = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="peekDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.012, -0.498192, -0.326)
shape = SubResource("BoxShape3D_hgqmd")

[node name="floor_detector" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor_detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.830745, 0)
shape = SubResource("BoxShape3D_vum5q")

[node name="player_sound_manager" type="Node3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="player_sound_manager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.851949, 0)
attenuation_model = 1
unit_size = 0.8

[node name="MeshInstance3D" type="MeshInstance3D" parent="player_sound_manager/AudioStreamPlayer3D"]
visible = false
mesh = SubResource("BoxMesh_3f1wh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ColorRectTop" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 2.0
offset_top = 512.0
offset_right = 130.0
offset_bottom = 646.0

[node name="ColorRectBottom" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 1026.0
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 646.0

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 186.0
offset_top = 520.0
offset_right = 226.0
offset_bottom = 560.0

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_btpvi")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="foot_pointer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.875, 0)

[node name="StepCast3D" type="ShapeCast3D" parent="foot_pointer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.522549, 0)
enabled = false
shape = SubResource("CylinderShape3D_76ijs")
max_results = 5

[node name="CSGMesh3D" type="CSGMesh3D" parent="foot_pointer/StepCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.990102, 0)
visible = false
mesh = SubResource("BoxMesh_nuo0q")

[node name="attack_area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="attack_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.309)
shape = SubResource("BoxShape3D_o1u06")

[node name="mask" type="Node3D" parent="."]

[node name="SoftBody3D3" type="SoftBody3D" parent="mask"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.495606, -0.322594)
mesh = SubResource("QuadMesh_m2qju")
skeleton = NodePath("../..")
collision_mask = 3
disable_mode = 1
pinned_points = [483, 462]
attachments/0/point_index = 483
attachments/0/spatial_attachment_path = NodePath("..")
attachments/0/offset = Vector3(-1, 1.49561, -0.322594)
attachments/1/point_index = 462
attachments/1/spatial_attachment_path = NodePath("..")
attachments/1/offset = Vector3(1, 1.49561, -0.322594)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.544914, 0)
visible = false
omni_range = 111.734

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qcn2s")
}

[connection signal="body_entered" from="obs_detect" to="." method="_on_obs_detect_body_entered"]
[connection signal="body_exited" from="obs_detect" to="." method="_on_obs_detect_body_exited"]
[connection signal="body_entered" from="peekDetector" to="." method="_on_climb_detector_body_entered"]
[connection signal="body_exited" from="peekDetector" to="." method="_on_climb_detector_body_exited"]
